--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "KHAN-MD",
+  "name": "Hamza-MD",
   "description": "Javascript WhatsApp bot made by Jᴀᴡᴀᴅ TᴇᴄʜX",
-  "logo": "https://files.catbox.moe/neni8p.jpg",
+  "logo": "https://image2url.com/r2/default/images/1771465897822-dd11e1d0-5dcb-45a1-a653-3f3dd6875725.png",
   "keywords": ["KHAN-MD"],
   "success_url": "/",
 
@@ -10,13 +10,13 @@
     "SESSION_ID": {
       "description": "Put the session-id here.",
       "required": true,
-      "value": ""
+      "value": "Hamza-MD"
     },  
     
     "STICKER_NAME": {
       "description": "type your sticker pack name.",
       "required": false,
-      "value": "KHAN-MD"
+      "value": "Hamza-MD"
     }, 
       
     "PREFIX": {
@@ -119,19 +119,19 @@
     "OWNER_NAME": {
       "description": "Type Bot Owner Name.",
       "required": false,
-      "value": "Jᴀᴡᴀᴅ TᴇᴄʜX"
+      "value": "Hamza Hacker"
     }, 
 
     "OWNER_NUMBER": {
       "description": "put the owner number for bot.",
       "required": false,
-      "value": "923427582273"
+      "value": "92339 6386670"
     }, 
 
     "BOT_NAME": {
       "description": "Type here the bot name.",
       "required": false,
-      "value": "KHAN-MD"
+      "value": "Hamza-MD"
     }, 
 
     "ANTI_LINK": {
@@ -161,7 +161,7 @@
     "DESCRIPTION": {
       "description": "add caption for menu and other",
       "required": false,
-      "value": "*© ᴘᴏᴡᴇʀᴇᴅ ʙʏ Jᴀᴡᴀᴅ TᴇᴄʜX*"
+      "value": "*© ᴘᴏᴡᴇʀᴇᴅ ʙʏ Hamza king*"
     },
      
     "AUTO_REACT": {
